--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://benchmarkco.github.io/front/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-    <script type="module" crossorigin src="https://benchmarkco.github.io/front/assets/index.3b733601.js"></script>
+    <title>Benchmark &reg; </title>
+    <script type="module" crossorigin src="https://benchmarkco.github.io/front/assets/index.df56181a.js"></script>
     <link rel="stylesheet" href="https://benchmarkco.github.io/front/assets/index.f24638ca.css">
   </head>
   <body>
