--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Benchmark &reg; </title>
     <link rel="stylesheet" href="" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script type="module" crossorigin src="https://benchmarkco.app/assets/index.d69bff78.js"></script>
-    <link rel="stylesheet" href="https://benchmarkco.app/assets/index.d206e3b6.css">
+    <script type="module" crossorigin src="https://benchmarkco.github.io/front/assets/index.d69bff78.js"></script>
+    <link rel="stylesheet" href="https://benchmarkco.github.io/front/assets/index.d206e3b6.css">
   </head>
   <body>
     <div id="root"></div>
